[add] add update-db endpoint + db data storage
